--- a/src/views/roteiros.html
+++ b/src/views/roteiros.html
@@ -17,8 +17,8 @@
     <img class="logo" src="../../public/logos/llogo.png" alt="Logo Explora" /> <!-- logomarca -->
     <nav class="navegacao"> <!-- menu -->
       <a href="index.html" class="btn-link">Início</a> <!-- link para home -->
-      <a href="planejar.html" class="btn-link active">Planejar</a> <!-- página atual -->
-      <a href="roteiros.html" class="btn-link">Roteiros</a> <!-- link para roteiros -->
+      <a href="planejar.html" class="btn-link">Planejar</a> <!-- página atual -->
+      <a href="roteiros.html" class="btn-link active">Roteiros</a> <!-- link para roteiros -->
       <a href="cadastro.html" class="btn-cadastro">Cadastre-se ou faça login</a> <!-- CTA de cadastro/login -->
     </nav>
   </header>
