--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,8 +19,8 @@
   <header> <!-- topo do site -->
     <img class="logo" style="width: 0px; height: 0px;" src="../../public/logos/llogo.png" alt="Logo Explora" /> <!-- logomarca -->
     <nav class="navegacao"> <!-- menu -->
-      <a href="index.html" class="btn-link">Início</a> <!-- link para home -->
-      <a href="planejar.html" class="btn-link active">Planejar</a> <!-- página atual -->
+  <a href="index.html" class="btn-link active">Início</a> <!-- link para home -->
+  <a href="planejar.html" class="btn-link">Planejar</a>
       <a href="roteiros.html" class="btn-link">Roteiros</a> <!-- link para roteiros -->
       <a href="cadastro.html" class="btn-cadastro">Cadastre-se ou faça login</a> <!-- CTA de cadastro/login -->
     </nav>
